--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara del móvil detrás (fullscreen cover) */
-  video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
-    object-fit:cover!important;z-index:0!important;background:#000!important}
+  /* Cámara detrás */
+  video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;object-fit:cover!important;z-index:0!important;background:#000!important}
   /* WebGL delante */
   a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:4!important;pointer-events:auto!important}
   /* UI */
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
-  .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
-       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.16;transition:opacity .35s}
+  .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.16;transition:opacity .35s}
   .dbg:hover{opacity:1}
 </style>
 </head>
@@ -36,11 +34,7 @@
   mindar-image="uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;"
   style="width:100vw;height:100vh">
 
-  <a-assets timeout="60000">
-    <!-- SIN src aquí: lo asignamos por JS (evita CORS raros) -->
-    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
-  </a-assets>
-
+  <!-- SIN a-assets para el video (evita warning de src vacío) -->
   <a-camera id="cam" look-controls="enabled:false">
     <a-entity id="mouseRay" cursor="rayOrigin: mouse" raycaster="objects: .ui3d,.heart,.dragplane; far: 3"></a-entity>
   </a-camera>
@@ -48,15 +42,17 @@
   <a-entity id="anchor" mindar-image-target="targetIndex:0"></a-entity>
 </a-scene>
 
+<!-- El <video> de la textura va FUERA de <a-scene> y con src por JS -->
+<video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous" style="display:none"></video>
+
 <script>
 (function(){
-  /* ====== Parche global a getUserMedia: fallback si no hay trasera ====== */
+  /* ===== Polyfill getUserMedia: si no hay trasera, cae a cualquier cámara ===== */
   (function(){
     if(!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) return;
     var orig = navigator.mediaDevices.getUserMedia.bind(navigator.mediaDevices);
     navigator.mediaDevices.getUserMedia = function(constraints){
       return orig(constraints).catch(function(err){
-        // Si falla por no encontrar dispositivo, probamos la frontal/por defecto
         if(err && (err.name==='NotFoundError' || err.name==='OverconstrainedError')){
           return orig({video:true, audio:false});
         }
@@ -65,9 +61,10 @@
     };
   })();
 
-  const qs = new URLSearchParams(location.search);
-  const log = function(m){ var el=document.getElementById('dbg'); el.textContent=m+' · '+new Date().toLocaleTimeString(); el.style.opacity=.9; setTimeout(function(){el.style.opacity=.16;},1200); console.log('[AR]',m); };
-  const clamp=function(v,a,b){ return Math.max(a,Math.min(b,v)); };
+  /* ===== Utilidades ===== */
+  var qs = new URLSearchParams(location.search);
+  function log(m){ var el=document.getElementById('dbg'); el.textContent=m+' · '+new Date().toLocaleTimeString(); el.style.opacity=.9; setTimeout(function(){el.style.opacity=.16;},1200); console.log('[AR]',m); }
+  function clamp(v,a,b){ return Math.max(a,Math.min(b,v)); }
   function getRay(){ var r=document.getElementById('mouseRay'); return r && r.components ? r.components.raycaster : null; }
   function setRO(el, order, depthTest, depthWrite){
     el.addEventListener('loaded', function(){
@@ -80,23 +77,26 @@
   /* ===== Cargar JSON ===== */
   var cfgUrl = qs.get('cfg');
   if(!cfgUrl){ log('Falta ?cfg=URL_DEL_JSON'); return; }
-  fetch(cfgUrl,{mode:'cors',cache:'no-store'}).then(function(r){return r.json();}).then(function(CFG){
-    init(CFG);
-  }).catch(function(){ log('❗ No pude cargar el JSON'); });
+  fetch(cfgUrl,{mode:'cors',cache:'no-store'}).then(function(r){return r.json();}).then(init).catch(function(){ log('❗ No pude cargar el JSON'); });
 
   function init(CFG){
-    /* ===== MindAR y cámara de fondo ===== */
     var scene = document.getElementById('scene');
-    scene.setAttribute('mindar-image','imageTargetSrc:'+CFG.target+'; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;');
 
+    /* Cámara del fondo en cover */
     new MutationObserver(function(){
-      Array.prototype.forEach.call(document.querySelectorAll('video'), function(v){
+      var vids = document.querySelectorAll('video');
+      for(var i=0;i<vids.length;i++){
+        var v=vids[i];
         if(v.srcObject instanceof MediaStream){
           Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
         }
-      });
+      }
     }).observe(document.documentElement,{subtree:true,childList:true});
 
+    /* MindAR config */
+    scene.setAttribute('mindar-image','imageTargetSrc:'+CFG.target+'; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;');
+
+    /* Geometría base */
     var PW=CFG.pw||2481, PH=CFG.ph||3508, H=PH/PW;
     function px2(x,y,w,h){ return {wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW}; }
 
@@ -107,14 +107,14 @@
     root.setAttribute('scale', cal.scale+' '+cal.scale+' 1');
     root.setAttribute('rotation', '0 0 '+cal.rot);
 
-    /* ===== Fondo del póster ===== */
+    /* Fondo del póster */
     var paper=document.createElement('a-plane');
     paper.setAttribute('width',1); paper.setAttribute('height',H);
     paper.setAttribute('position','0 0 -0.02');
     paper.setAttribute('material','shader:flat; color:#ffffff; side:double; transparent:false');
     root.appendChild(paper); setRO(paper, 1, false, false);
 
-    /* ===== Marco animado (no tapa el vídeo) ===== */
+    /* Marco animado */
     var vslot=CFG.slotVid, u=px2(vslot.x,vslot.y,vslot.w,vslot.h);
     var glow1 = (CFG.colors&&CFG.colors.wave1) ? CFG.colors.wave1 : '#13d77a';
     var glow2 = (CFG.colors&&CFG.colors.wave2) ? CFG.colors.wave2 : '#ffd54a';
@@ -133,7 +133,8 @@
         {w:t,       h:u.hn, x:u.cx-u.wn/2-t/2,y:u.cy},
         {w:t,       h:u.hn, x:u.cx+u.wn/2+t/2,y:u.cy}
       ];
-      strips.forEach(function(s,i){
+      for(var i=0;i<strips.length;i++){
+        var s=strips[i];
         var p=document.createElement('a-plane');
         p.setAttribute('width',s.w); p.setAttribute('height',s.h);
         p.setAttribute('position',s.x+' '+s.y+' '+z);
@@ -141,14 +142,15 @@
         p.setAttribute('material','shader:standard; color:'+col+'; emissive:'+col+'; emissiveIntensity:0.26; roughness:1; metalness:0; transparent:true; opacity:.95');
         p.setAttribute('animation__glow','property:material.emissiveIntensity; from:0.18; to:0.44; dir:alternate; dur:1200; loop:true; easing:easeInOutSine');
         root.appendChild(p); setRO(p, 20, false, false);
-      });
+      }
     })();
 
-    /* ===== Vídeo centrado (sin moverse) ===== */
+    /* Vídeo estable y centrado */
     var v1=document.getElementById('v1');
-    v1.crossOrigin='anonymous'; v1.muted=true; v1.playsInline=true;
+    v1.crossOrigin='anonymous';
+    v1.muted=true; v1.playsInline=true;
     v1.setAttribute('playsinline','true'); v1.setAttribute('webkit-playsinline','true');
-    v1.src = CFG.video || '';  // tu Cloudinary mp4
+    v1.src = CFG.video || 'https://res.cloudinary.com/dtge9nklw/video/upload/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4';
     v1.load();
 
     var vPlane=document.createElement('a-plane');
@@ -171,14 +173,14 @@
       if(mesh && mesh.material && mesh.material.map) coverFromMap(mesh.material.map);
     });
 
-    /* ===== Canvas overlay (textos + barra musical) ===== */
+    /* Canvas overlay (textos + barra musical) */
     var Cw=2048, Ch=Math.round(Cw*H);
     var canvas=document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
     var ctx=canvas.getContext('2d');
 
     var overlay=document.createElement('a-plane');
     overlay.setAttribute('width',1); overlay.setAttribute('height',H);
-    overlay.setAttribute('position','0 0 0.0');  // debajo del vídeo
+    overlay.setAttribute('position','0 0 0.0');
     overlay.setAttribute('material','shader:flat; transparent:true; side:double; opacity:1');
     root.appendChild(overlay); setRO(overlay, 3, false, false);
     overlay.addEventListener('loaded', function(){
@@ -202,6 +204,7 @@
 
     var btnAudio=document.getElementById('btnAudio');
     var audio=null, acx=null, analyser=null;
+
     function setupAudio(){
       if(audio) return;
       audio=new Audio(CFG.audio||''); audio.crossOrigin='anonymous'; audio.preload='auto';
@@ -214,15 +217,18 @@
       audio.addEventListener('play', function(){ btnAudio.textContent='⏸ Audio'; });
       audio.addEventListener('pause',function(){ btnAudio.textContent='▶️ Audio'; });
     }
-    btnAudio.onclick=function(){
+    async function toggleAudio(){
       setupAudio();
-      (async function(){
-        try{
-          if(audio.paused){ if(acx && acx.state==='suspended'){ await acx.resume(); } await audio.play(); }
-          else { audio.pause(); }
-        }catch(e){}
-      })();
-    };
+      try{
+        if(audio.paused){
+          if(acx && acx.state==='suspended'){ await acx.resume(); }
+          await audio.play();
+        } else {
+          audio.pause();
+        }
+      }catch(e){}
+    }
+    btnAudio.addEventListener('click', function(){ toggleAudio(); });
 
     var BARS=48, waveH=Math.round(36*Cw/2048), gap=Math.round(24*Cw/2048);
     var levels=new Array(BARS).fill(0), peaks=new Array(BARS).fill(0);
@@ -314,7 +320,7 @@
     }
     requestAnimationFrame(draw);
 
-    /* ===== Corazones con física + drag ===== */
+    /* Corazones con física + drag */
     var HEART_SVG = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path fill="%23ff3b61" d="M47.5 6c-5 0-8.8 3-15.5 10C25.3 9 21.5 6 16.5 6 9 6 4 11.8 4 19.2 4 33.7 23.1 43.4 32 58c8.9-14.6 28-24.3 28-38.8C60 11.8 55 6 47.5 6z"/></svg>';
     var hearts=[]; // {el,x,y,vx,vy}
     var area = { x1:-0.5+0.06, x2:0.5-0.06, y1:-H/2+0.10, y2:-H/2+0.55 };
@@ -344,7 +350,8 @@
 
     function pointerLocal(){
       var ray = getRay(); var ints = ray && ray.intersections ? ray.intersections : [];
-      var hit = ints.find(function(i){ return i.object && i.object.el && i.object.el.classList.contains('dragplane'); });
+      var hit = null;
+      for(var i=0;i<ints.length;i++){ if(ints[i].object && ints[i].object.el && ints[i].object.el.classList.contains('dragplane')){ hit=ints[i]; break; } }
       if(!hit) return null;
       var p = hit.point.clone();
       root.object3D.worldToLocal(p);
@@ -354,7 +361,8 @@
 
     scene.addEventListener('pointerdown', function(){
       var ray = getRay(); var ints = ray && ray.intersections ? ray.intersections : [];
-      var hit = ints.find(function(i){ return i.object && i.object.el && i.object.el.classList.contains('heart'); });
+      var hit = null;
+      for(var i=0;i<ints.length;i++){ if(ints[i].object && ints[i].object.el && ints[i].object.el.classList.contains('heart')){ hit=ints[i]; break; } }
       if(!hit) return;
       var h = heartFromEl(hit.object.el); if(!h) return;
       var p = pointerLocal(); if(!p) return;
@@ -381,7 +389,8 @@
         lastPointer = p; lastTime = now;
       }
 
-      hearts.forEach(function(o){
+      for(var i=0;i<hearts.length;i++){
+        var o=hearts[i];
         if(o!==dragging){ o.vy += g*dt; o.x += o.vx*dt; o.y += o.vy*dt; }
         if(o.x<area.x1){ o.x=area.x1; o.vx*=-damp; }
         if(o.x>area.x2){ o.x=area.x2; o.vx*=-damp; }
@@ -389,12 +398,11 @@
         if(o.y>area.y2){ o.y=area.y2; o.vy*=-damp; }
         o.el.setAttribute('position', o.x+' '+o.y+' 0.06');
         o.el.setAttribute('rotation', '0 0 '+(Math.sin(performance.now()/300 + o.x*10)*6));
-      });
-
+      }
       requestAnimationFrame(heartsTick);
     })();
 
-    /* ===== Botón de cámara robusto (con fallback) ===== */
+    /* Botón cámara robusto */
     function waitSceneLoaded(){
       return new Promise(function(res){
         if(scene.hasLoaded) return res();
@@ -417,7 +425,6 @@
     }
     async function bootAR(){
       try{
-        // Pedimos permiso primero (el parche gUM hará fallback a la cámara disponible)
         var s=await navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}, width:{ideal:1280}, height:{ideal:720}}, audio:false});
         s.getTracks().forEach(function(t){ t.stop(); });
       }catch(e){}
@@ -437,7 +444,7 @@
       });
     });
 
-    // También arrancamos en el primer gesto (iOS)
+    // Arranque también en primer gesto (iOS)
     window.addEventListener('pointerdown', function(){
       var sys = scene.systems['mindar-image-system'];
       if(!sys || !sys.active) btnStart.click();
