--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   </a-assets>
 
   <a-camera id="cam" look-controls="enabled:false">
-    <a-entity id="mouseRay" cursor="rayOrigin: mouse"
-              raycaster="objects: .ui3d,.heart,.dragplane; far: 3"></a-entity>
+    <a-entity cursor="rayOrigin: mouse" raycaster="objects: .ui3d; far: 3"></a-entity>
   </a-camera>
 
   <a-entity id="anchor" mindar-image-target="targetIndex:0"></a-entity>
@@ -52,7 +51,6 @@
 (async function(){
   const qs = new URLSearchParams(location.search);
   const log = m => { const el=document.getElementById('dbg'); el.textContent = m+' · '+new Date().toLocaleTimeString(); el.style.opacity=.9; setTimeout(()=>el.style.opacity=.16,1200); console.log('[AR]',m); };
-  const clamp=(v,a,b)=>Math.max(a,Math.min(b,v));
 
   /* ---------- Helpers ---------- */
   function setRO(el, order, depthTest, depthWrite){
@@ -62,13 +60,14 @@
       if(mesh.material){ mesh.material.depthTest=!!depthTest; mesh.material.depthWrite=!!depthWrite; mesh.material.needsUpdate=true; }
     });
   }
+  const clamp=(v,a,b)=>Math.max(a,Math.min(b,v));
 
   /* ---------- Cargar JSON ---------- */
   const cfgUrl = qs.get('cfg');
   if(!cfgUrl){ log('Falta ?cfg=URL_DEL_JSON'); return; }
   let CFG;
   try{ CFG = await (await fetch(cfgUrl,{mode:'cors',cache:'no-store'})).json(); }
-  catch(e){ log('❗ No pude cargar el JSON'); return; }
+  catch(e){ log('❗ No pude cargar el JSON de cliente'); return; }
 
   /* ---------- MindAR ---------- */
   const scene = document.getElementById('scene');
@@ -92,77 +91,39 @@
   root.setAttribute('scale', `${cal.scale} ${cal.scale} 1`);
   root.setAttribute('rotation', `0 0 ${cal.rot}`);
 
-  /* ---------- Póster: fondo blanco ---------- */
+  /* ---------- Póster: fondo blanco (detrás de todo) ---------- */
   const paper=document.createElement('a-plane');
   paper.setAttribute('width',1); paper.setAttribute('height',H);
   paper.setAttribute('position','0 0 -0.02');
   paper.setAttribute('material','shader:flat; color:#ffffff; side:double; transparent:false');
   root.appendChild(paper); setRO(paper, 1, false, false);
 
-  /* ---------- Marco animado (glow + runners) ---------- */
+  /* ---------- Marco muy fino (no tapa) ---------- */
   const vslot=CFG.slotVid, u=px2(vslot.x,vslot.y,vslot.w,vslot.h);
-  const glow1 = CFG.colors?.wave1 || '#13d77a';
-  const glow2 = CFG.colors?.wave2 || '#ffd54a';
 
-  // marco fino detrás del vídeo
-  const frame=document.createElement('a-plane');
-  frame.setAttribute('width',u.wn*1.012); frame.setAttribute('height',u.hn*1.012);
-  frame.setAttribute('position',`${u.cx} ${u.cy} 0.000`);
-  frame.setAttribute('material','shader:flat; color:#e9eef2; side:double; transparent:false');
-  root.appendChild(frame); setRO(frame, 5, false, false);
+  const frameThin=document.createElement('a-plane');
+  frameThin.setAttribute('width',u.wn*1.012); frameThin.setAttribute('height',u.hn*1.012);
+  frameThin.setAttribute('position',`${u.cx} ${u.cy} 0.000`);
+  frameThin.setAttribute('material','shader:flat; color:#e9eef2; side:double; transparent:false');
+  root.appendChild(frameThin); setRO(frameThin, 5, false, false);
 
-  // tiras luminosas (glow respirando)
-  (function stripsGlow(){
-    const t=0.004, z=0.018;
-    const strips=[
-      {w:u.wn*1.01,h:t,   x:u.cx,           y:u.cy+u.hn/2+t/2},
-      {w:u.wn*1.01,h:t,   x:u.cx,           y:u.cy-u.hn/2-t/2},
-      {w:t,       h:u.hn, x:u.cx-u.wn/2-t/2,y:u.cy},
-      {w:t,       h:u.hn, x:u.cx+u.wn/2+t/2,y:u.cy},
-    ];
-    strips.forEach((s,i)=>{
-      const p=document.createElement('a-plane');
-      p.setAttribute('width',s.w); p.setAttribute('height',s.h);
-      p.setAttribute('position',`${s.x} ${s.y} ${z}`);
-      const col = i%2 ? glow2 : glow1;
-      p.setAttribute('material',`shader:standard; color:${col}; emissive:${col}; emissiveIntensity:0.24; roughness:1; metalness:0; transparent:true; opacity:.95`);
-      p.setAttribute('animation__glow','property:material.emissiveIntensity; from:0.18; to:0.42; dir:alternate; dur:1200; loop:true; easing:easeInOutSine');
-      root.appendChild(p); setRO(p, 20, false, false);
-    });
-  })();
-
-  // runners que recorren el marco
-  (function runners(){
-    const z=0.019, w=0.02, h=0.006, dur=1800;
-    function runner(x1,y1,x2,y2,color){
-      const r=document.createElement('a-plane');
-      r.setAttribute('width',w); r.setAttribute('height',h);
-      r.setAttribute('position',`${x1} ${y1} ${z}`);
-      r.setAttribute('material',`shader:standard; color:${color}; emissive:${color}; emissiveIntensity:0.9; roughness:1; metalness:0; transparent:true; opacity:1`);
-      r.setAttribute('animation__go',`property:position; to:${x2} ${y2} ${z}; dur:${dur}; dir:alternate; loop:true; easing:easeInOutSine`);
-      root.appendChild(r); setRO(r, 25, false, false);
-    }
-    // arriba L→R, abajo R→L, izquierda abajo→arriba, derecha arriba→abajo
-    runner(u.cx-u.wn/2, u.cy+u.hn/2+0.01, u.cx+u.wn/2, u.cy+u.hn/2+0.01, glow1);
-    runner(u.cx+u.wn/2, u.cy-u.hn/2-0.01, u.cx-u.wn/2, u.cy-u.hn/2-0.01, glow2);
-    runner(u.cx-u.wn/2-0.01, u.cy-u.hn/2, u.cx-u.wn/2-0.01, u.cy+u.hn/2, glow2);
-    runner(u.cx+u.wn/2+0.01, u.cy+u.hn/2, u.cx+u.wn/2+0.01, u.cy-u.hn/2, glow1);
-  })();
-
-  /* ---------- Plano del VÍDEO (encima) ---------- */
+  /* ---------- Plano del VÍDEO (encima de todo lo demás) ---------- */
   const v1=document.getElementById('v1');
-  v1.crossOrigin='anonymous'; v1.muted=true; v1.playsInline=true;
+  v1.crossOrigin='anonymous';
+  v1.muted=true; v1.playsInline=true;
   v1.setAttribute('playsinline','true'); v1.setAttribute('webkit-playsinline','true');
-  v1.src = CFG.video || '';
+  v1.src = CFG.video || ''; // p.ej: https://res.cloudinary.com/dtge9nklw/video/upload/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4
   v1.load();
 
   const vPlane=document.createElement('a-plane');
   vPlane.setAttribute('width',u.wn);
   vPlane.setAttribute('height',u.hn);
   vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.02`);
+  // PRIMERA OPCIÓN: usar material src:#v1 (como cuando te iba)
   vPlane.setAttribute('material','shader:flat; side:double; transparent:false; src:#v1');
   root.appendChild(vPlane); setRO(vPlane, 100, true, true);
 
+  // cover (crop tipo object-fit:cover)
   function coverFromMap(map){
     if(!map || !v1.videoWidth) return;
     const vr=v1.videoWidth/v1.videoHeight, rr=vslot.w/vslot.h;
@@ -173,7 +134,7 @@
   vPlane.addEventListener('materialtextureloaded', e=>coverFromMap(e.detail.texture));
   v1.addEventListener('loadedmetadata', ()=>coverFromMap(vPlane.getObject3D('mesh')?.material?.map));
 
-  // Fallback automático si hiciera falta
+  // FALLBACK AUTOMÁTICO a THREE.VideoTexture si el video queda negro
   let forcedVideoTex=false;
   function forceThreeVideoTexture(){
     if(forcedVideoTex) return;
@@ -182,18 +143,25 @@
     tex.needsUpdate=true;
     mesh.material.map=tex; mesh.material.needsUpdate=true;
     coverFromMap(tex);
-    forcedVideoTex=true; log('Fallback a THREE.VideoTexture');
+    forcedVideoTex=true;
+    log('Fallback a THREE.VideoTexture');
   }
-  function checkBlackFallback(){ const mesh=vPlane.getObject3D('mesh'); const map=mesh?.material?.map; if(!v1.videoWidth || !map) forceThreeVideoTexture(); }
+  // chequeo tras intentar reproducir
+  function checkBlackFallback(){
+    const mesh=vPlane.getObject3D('mesh');
+    const map=mesh?.material?.map;
+    // si no hay ancho de vídeo o el mapa no existe, forzamos fallback
+    if(!v1.videoWidth || !map) forceThreeVideoTexture();
+  }
 
-  /* ---------- Canvas overlay: textos + barra musical + cinta inferior ---------- */
+  /* ---------- Canvas overlay: textos + barra + animación inferior ---------- */
   const Cw=2048, Ch=Math.round(Cw*H);
   const canvas=document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
   const ctx=canvas.getContext('2d');
 
   const overlay=document.createElement('a-plane');
   overlay.setAttribute('width',1); overlay.setAttribute('height',H);
-  overlay.setAttribute('position','0 0 0.0');   // debajo del vídeo
+  overlay.setAttribute('position','0 0 0.0');   // siempre por debajo del vídeo
   overlay.setAttribute('material','shader:flat; transparent:true; side:double; opacity:1');
   root.appendChild(overlay); setRO(overlay, 3, false, false);
   overlay.addEventListener('loaded', ()=>{
@@ -226,7 +194,7 @@
   }
   btnAudio.onclick=async()=>{ setupAudio(); try{ if(audio.paused){ acx&&acx.state==='suspended'&&await acx.resume(); await audio.play(); } else { audio.pause(); } }catch{} };
 
-  /* ---------- Barra musical suave + picos + cinta inferior ---------- */
+  /* ---------- Barra musical mejorada + cinta inferior ---------- */
   const BARS=48, waveH=Math.round(36*Cw/2048), gap=Math.round(24*Cw/2048);
   const levels=new Array(BARS).fill(0), peaks=new Array(BARS).fill(0);
   function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
@@ -255,7 +223,7 @@
     ctx.fillStyle='rgba(0,0,0,0.12)'; ctx.fillRect(pbx, pby+2, pbw, pbh);
     ctx.fillStyle='#000'; ctx.fillRect(pbx, pby, pbw, pbh);
 
-    // Progreso y tiempos
+    // Progreso
     let p=0, cur='0:00', dur='0:00';
     if(audio && audio.duration>0){ p=audio.currentTime/audio.duration; cur=mmss(audio.currentTime); dur=mmss(audio.duration); }
     const fw=Math.max(2, Math.floor(pbw*p));
@@ -264,6 +232,7 @@
     grad.addColorStop(1, (CFG.colors?.wave2||'#ffd54a'));
     ctx.fillStyle=grad; ctx.fillRect(pbx, pby, fw, pbh);
 
+    // Knob + tiempos
     const kx=pbx+fw, ky=pby+pbh/2, r=Math.max(3, Math.round(pbh*0.9/2));
     ctx.beginPath(); ctx.arc(kx,ky,r,0,Math.PI*2); ctx.fillStyle='#000'; ctx.fill();
     ctx.fillStyle='#000'; ctx.textBaseline='alphabetic'; ctx.textAlign='left';
@@ -271,7 +240,7 @@
     ctx.fillText(cur, pbx, pby - 10);
     ctx.textAlign='right'; ctx.fillText(dur, pbx+pbw, pby - 10);
 
-    // Espectro doble con smoothing + peaks + barrido
+    // Espectro doble (suave con peaks y barrido)
     const arr = (analyser? (new Uint8Array(analyser.frequencyBinCount)) : null);
     if(arr) analyser.getByteFrequencyData(arr);
 
@@ -285,7 +254,7 @@
 
       for(let i=0;i<BARS;i++){
         const bandIndex = Math.min(arr?arr.length-1:0, 2+i);
-        const raw = arr ? (arr[bandIndex]/255) : (0.25 + 0.75*Math.abs(Math.sin((t/420)+(i*0.35)))));
+        const raw = arr ? (arr[bandIndex]/255) : (0.25 + 0.75*Math.abs(Math.sin((t/420)+(i*0.35))));
         levels[i] = Math.max(raw*0.9 + levels[i]*0.1, levels[i]-0.012);
         peaks[i]  = Math.max(peaks[i]-0.006, levels[i]);
 
@@ -319,111 +288,45 @@
       }
     }
 
-    /* Cinta inferior sutil */
+    /* --- Cinta inferior animada (limpia y sutil) --- */
     const bandH = Math.round(50*Cw/2048);
-    const yBand = Math.round((PH*0.88)*Ch/PH);
+    const yBand = Math.round((PH*0.88)*Ch/PH); // zona baja del póster
     const g2 = ctx.createLinearGradient(0,yBand,0,yBand+bandH);
-    g2.addColorStop(0,'rgba(0,0,0,0.06)'); g2.addColorStop(1,'rgba(0,0,0,0)');
+    g2.addColorStop(0,'rgba(0,0,0,0.06)');
+    g2.addColorStop(1,'rgba(0,0,0,0)');
     ctx.fillStyle=g2; ctx.fillRect(0,yBand,Cw,bandH);
+    // ondas suaves
+    ctx.save();
+    ctx.globalAlpha = 0.65;
+    ctx.beginPath();
+    const A = 10, L = 220, v = t/900;
+    ctx.moveTo(0, yBand + bandH/2);
+    for(let x=0;x<=Cw;x+=6){
+      const y = yBand + bandH/2 + Math.sin((x+v*120)/L)*A + Math.sin((x+v*180)/L*1.7)*A*0.5;
+      ctx.lineTo(x,y);
+    }
+    ctx.lineTo(Cw, yBand+bandH); ctx.lineTo(0, yBand+bandH); ctx.closePath();
+    const c1 = ctx.createLinearGradient(0,yBand,0,yBand+bandH);
+    c1.addColorStop(0, (CFG.colors?.wave1||'#13d77a')+'22');
+    c1.addColorStop(1, (CFG.colors?.wave2||'#ffd54a')+'14');
+    ctx.fillStyle=c1; ctx.fill();
+    ctx.restore();
 
     if(overlay.__tex) overlay.__tex.needsUpdate = true;
     requestAnimationFrame(draw);
   }
   requestAnimationFrame(draw);
 
-  /* ---------- Corazones con “física” + drag ---------- */
-  const HEART_SVG = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path fill="%23ff3b61" d="M47.5 6c-5 0-8.8 3-15.5 10C25.3 9 21.5 6 16.5 6 9 6 4 11.8 4 19.2 4 33.7 23.1 43.4 32 58c8.9-14.6 28-24.3 28-38.8C60 11.8 55 6 47.5 6z"/></svg>';
-  const hearts=[]; // {el,x,y,vx,vy}
-  // área de juego: banda inferior del póster
-  const area = { x1:-0.5+0.06, x2:0.5-0.06, y1:-H/2+0.10, y2:-H/2+0.55 };
-
-  // plano invisible para calcular intersecciones de drag
-  const dragPlane=document.createElement('a-plane');
-  dragPlane.classList.add('dragplane');
-  dragPlane.setAttribute('width',1); dragPlane.setAttribute('height',H);
-  dragPlane.setAttribute('position','0 0 0.07');
-  dragPlane.setAttribute('material','color:#fff; transparent:true; opacity:0; side:double; depthTest:false; depthWrite:false');
-  root.appendChild(dragPlane); setRO(dragPlane, 150, false, false);
-
-  function spawnHeart(x=(area.x1+area.x2)/2, y=area.y2-0.05){
-    const h = document.createElement('a-image');
-    h.setAttribute('src', HEART_SVG);
-    h.setAttribute('width', 0.10); h.setAttribute('height', 0.10);
-    h.setAttribute('position', `${x} ${y} 0.06`);
-    h.setAttribute('material', 'transparent:true; alphaTest:0.01; side:double');
-    h.classList.add('ui3d','heart');
-    root.appendChild(h); setRO(h, 140, false, false);
-    hearts.push({el:h, x, y, vx:(Math.random()-0.5)*0.05, vy:0.3+Math.random()*0.12});
-    if(hearts.length>24){ const old=hearts.shift(); old.el.remove(); }
+  /* ---------- Ken Burns suave ---------- */
+  function kenBurns(){
+    const mesh=vPlane.getObject3D('mesh'); if(!mesh||!mesh.material||!mesh.material.map){ requestAnimationFrame(kenBurns); return; }
+    const t=mesh.material.map;
+    const rx=t.repeat.x, ry=t.repeat.y, ox=t.offset.x, oy=t.offset.y;
+    const dx=(Math.sin(performance.now()/6500)*0.015)*rx, dy=(Math.cos(performance.now()/9500)*0.015)*ry;
+    t.offset.set(clamp(ox+dx,0,1-rx), clamp(oy+dy,0,1-ry)); t.needsUpdate=true;
+    requestAnimationFrame(kenBurns);
   }
-
-  const ray = document.getElementById('mouseRay').components.raycaster;
-  let dragging=null, dragOffset={x:0,y:0}, lastPointer=null, lastTime=0;
-
-  function pointerLocal(){
-    const ints = ray.intersections || [];
-    const hit = ints.find(i => i.object && i.object.el && i.object.el.classList.contains('dragplane'));
-    if(!hit) return null;
-    const p = hit.point.clone();
-    root.object3D.worldToLocal(p); // coord locales del póster
-    return {x: clamp(p.x, area.x1, area.x2), y: clamp(p.y, area.y1, area.y2)};
-  }
-
-  function heartFromEl(el){ return hearts.find(h=>h.el===el)||null; }
-
-  scene.addEventListener('mousedown', ()=>{
-    // ¿estamos mirando a un corazón?
-    const ints = ray.intersections || [];
-    const hit = ints.find(i => i.object && i.object.el && i.object.el.classList.contains('heart'));
-    if(!hit) return;
-    const h = heartFromEl(hit.object.el); if(!h) return;
-    const p = pointerLocal(); if(!p) return;
-    dragging = h;
-    dragOffset = {x: h.x - p.x, y: h.y - p.y};
-    lastPointer = p; lastTime = performance.now();
-  });
-  scene.addEventListener('mouseup', ()=>{ dragging=null; });
-  scene.addEventListener('mouseleave', ()=>{ dragging=null; });
-
-  function heartsTick(){
-    const dt = 1/60, g=-0.8, damp=0.55;
-    const now = performance.now();
-    const p = pointerLocal();
-
-    // drag
-    if(dragging && p){
-      const nx = clamp(p.x + dragOffset.x, area.x1, area.x2);
-      const ny = clamp(p.y + dragOffset.y, area.y1, area.y2);
-      // velocidad basada en desplazamiento del puntero
-      if(lastPointer){
-        const dtms = Math.max(16, now-lastTime);
-        dragging.vx = (nx - dragging.x) / (dtms/1000);
-        dragging.vy = (ny - dragging.y) / (dtms/1000);
-      }
-      dragging.x = nx; dragging.y = ny;
-      lastPointer = p; lastTime = now;
-    }
-
-    // integración simple
-    hearts.forEach(o=>{
-      if(o!==dragging){
-        o.vy += g*dt;
-        o.x  += o.vx*dt;
-        o.y  += o.vy*dt;
-      }
-      // colisiones con bordes
-      if(o.x<area.x1){ o.x=area.x1; o.vx*=-damp; }
-      if(o.x>area.x2){ o.x=area.x2; o.vx*=-damp; }
-      if(o.y<area.y1){ o.y=area.y1; o.vy*=-damp; }
-      if(o.y>area.y2){ o.y=area.y2; o.vy*=-damp; }
-      // render
-      o.el.setAttribute('position', `${o.x} ${o.y} 0.06`);
-      o.el.setAttribute('rotation', `0 0 ${Math.sin(performance.now()/300 + o.x*10)*6}`);
-    });
-
-    requestAnimationFrame(heartsTick);
-  }
-  requestAnimationFrame(heartsTick);
+  requestAnimationFrame(kenBurns);
 
   /* ---------- Estados / UI ---------- */
   const btnStart=document.getElementById('btnStart');
@@ -442,12 +345,15 @@
   };
 
   anchor.addEventListener('targetFound', async ()=>{
-    try{ await v1.play(); setTimeout(checkBlackFallback, 200); }catch{}
-    // Audio autoplay
-    setupAudio(); try{ acx && acx.state==='suspended' && await acx.resume(); await audio.play(); }catch{}
+    try{
+      // reproduce el vídeo y revisa fallback a los 200ms
+      await v1.play();
+      setTimeout(checkBlackFallback, 200);
+    }catch{}
+    // audio autoplay
+    setupAudio();
+    try{ acx && acx.state==='suspended' && await acx.resume(); await audio.play(); }catch{}
     document.getElementById('btnAudio').disabled=false;
-    // Corazones de bienvenida
-    for(let i=0;i<4;i++) spawnHeart();
     log('Target FOUND');
   });
 
